# call-stack-logger

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  Dockerfile  LICENSE_COMMERCIAL  Makefile  Makefile_legacy  README.md  docker-compose.yml
.github/workflows/: ci.yml
include/: callStack.h  durationFormat.h  format.h  prettyTime.h  stdSymbolFilter.h  traceFilePath.h  types.h  unwinder.h  utils.h
misc/gif_generator/: .gitignore  README.md  capture_inputs.sh  render.py
src/: CMakeLists.txt  Makefile  Makefile_legacy  callStack.cpp  main.cpp  trace.cpp
tests/: CMakeLists.txt  lsan-suppressions.txt
tests/integration/: CMakeLists.txt  callstack_api_program.cpp  crash_traced_program.cpp  exception_traced_program.cpp  global_dtor_traced_program.cpp  log_elapsed_traced_program.cpp  overflow_depth_program.cpp  stripped_caller_lib.cpp  stripped_caller_program.cpp  test_integration.cpp  threaded_traced_program.cpp  traced_program.cpp
tests/unit/: CMakeLists.txt  test_duration_format.cpp  test_format.cpp  test_pretty_time.cpp  test_std_symbol_filter.cpp  test_trace_file_path.cpp
